---------------------------------------------------------------------------
Version 4.5.2  [DEVEL] (rgerhards), 2009-07-??
- legacy syslog parser changed so that it now accepts date stamps in
  wrong case. Some devices seem to create them and I do not see any harm
  in supporting that.
- bugfix: memory leak with some input modules. Those inputs that
  use parseAndSubmitMsg() leak two small memory blocks with every message.
  Typically, those process only relatively few messages, so the issue 
  does most probably not have any effect in practice.
- bugfix: if tcp listen port could not be created, no error message was
  emitted
---------------------------------------------------------------------------
Version 4.5.1  [DEVEL] (rgerhards), 2009-07-15
- CONFIG CHANGE: $HUPisRestart default is now "off". We are doing this
  to support removal of restart-type HUP in v5.
- bugfix: fromhost-ip was sometimes truncated
- bugfix: potential segfault when zip-compressed syslog records were
  received (double free)
- bugfix: properties inputname, fromhost, fromhost-ip, msg were lost when
  working with disk queues
- performance enhancement: much faster, up to twice as fast (depending
  on configuration)
- bugfix: abort condition when RecvFrom was not set and message reduction
  was on. Happend e.g. with imuxsock.
- added $klogConsoleLogLevel directive which permits to set a new
  console log level while rsyslog is active
- bugfix: message could be truncated after TAG, often when forwarding
  This was a result of an internal processing error if maximum field
  sizes had been specified in the property replacer.
- added ability for the TCP output action to "rebind" its send socket after
  sending n messages (actually, it re-opens the connection, the name is 
  used because this is a concept very similiar to $ActionUDPRebindInterval).
  New config directive $ActionSendTCPRebindInterval added for the purpose.
  By default, rebinding is disabled. This is considered useful for load