@@ -3,6 +3,8 @@ Version 4.5.2  [DEVEL] (rgerhards), 2009-07-??
 - legacy syslog parser changed so that it now accepts date stamps in
   wrong case. Some devices seem to create them and I do not see any harm
   in supporting that.
+- added $InputTCPMaxListeners directive - permits to specify how many 
+  TCP servers shall be possible (default is 20).
 - bugfix: memory leak with some input modules. Those inputs that
   use parseAndSubmitMsg() leak two small memory blocks with every message.
   Typically, those process only relatively few messages, so the issue 
